[package]
name = "refuel-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#chrono = "0.4.24"
#clap = { version = "4.2.5", features = ["derive"] }
prost = "0.11.9"
#thiserror = "1.0.40"
tokio = { version = "1", features = ["full", "time"] }
tonic = "0.9.2"
#tracing = "0.1.37"
#tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.9.2"
