[package]
name = "refuel-app"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true, features = ["serde"] }
leptos = { workspace = true, features = ["serde"] }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["time"], optional = true }

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "dep:tokio"]
