[package]
name = "refuel-app"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refuel-db = { path = "../db", optional = true }
chrono = { workspace = true, features = ["serde"] }
leptos = { workspace = true, features = ["serde"] }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos_chart = { workspace = true, features = ["LineChart"] }
theta-chart = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["time"], optional = true }
tracing = { workspace = true }

[features]
default = ["hydrate"]
hydrate = [
	"leptos/hydrate",
	"leptos_meta/hydrate",
	"leptos_router/hydrate",
	"leptos_chart/hydrate"
]
ssr = [
	"leptos/ssr",
	"leptos_meta/ssr",
	"leptos_router/ssr",
	"leptos_chart/ssr",
	"dep:refuel-db",
	"dep:tokio"
]
