[package]
name = "refuel-front"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
refuel-app = { path = "../app", features = ["hydrate"] }
leptos = { workspace = true, features = ["hydrate", "serde"] }
log = "0.4"
wasm-bindgen = "0.2"
console_log = "0.2"
console_error_panic_hook = "0.1"
