[package]
name = "refuel-server"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
diesel = { version = "2.0.4", default-features = false, features = ["with-deprecated", "chrono", "sqlite"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.8.1"
reqwest = "0.11.16"
scraper = "0.15.0"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.3.1"
