[package]
name = "refuel-server"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refuel-app = { path = "../app", default-features = false, features = ["ssr"] }
axum = { workspace = true }
axum-macros = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
diesel = { version = "2.0.4", default-features = false, features = ["with-deprecated", "chrono", "sqlite"] }
dotenvy = "0.15.7"
lazy_static = "1.4.0"
leptos = { workspace = true, features = ["serde", "ssr"] }
leptos_meta = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true, features = ["ssr"] }
leptos_dom = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }
rand = "0.8.5"
regex = "1.8.1"
reqwest = "0.11.16"
scraper = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.3.1"
